--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,6 @@
     <title>trial webpage</title>
   </head>
   <body>
-    <h1>Hello, Mom! ❤️ </h1>
+    <h1>Hello, Huda! ❤️ </h1>
   </body>
 </html>
