--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>trial webpage</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Hello, World! :)</h1>
   </body>
 </html>
